Added forced deletes